[ADD] 使代码可以启动训练
1. 增加生成vid的tfr的脚本，生成一个10
seqs的tfr数据（200MB左右，太大没有上传）
2. vid的labelmap
3. 配置mvb2的config，使之可以训练

Test:
/home/zhangll/anaconda3/envs/lstm_object_detection/bin/python /home/zhangll/liliang-dev/models/research/lstm_object_detection/train.py --logtostderr --train_dir=ILSVRC2015-TFR-train-log --pipeline_config_path=configs/lstm_ssd_interleaved_mobilenet_v2_imagenet.config

目前可以正常运行，loss逐步下降:

--- a/research/lstm_object_detection/configs/lstm_ssd_interleaved_mobilenet_v2_imagenet.config
+++ b/research/lstm_object_detection/configs/lstm_ssd_interleaved_mobilenet_v2_imagenet.config
@@ -185,11 +185,11 @@ train_input_reader: {
   queue_capacity: 12
   prefetch_size: 12
   min_after_dequeue: 4
-  label_map_path: "path/to/label_map"
+  label_map_path: "vid_data_tiny/vid_label_map.pbtxt"
   external_input_reader {
     [lstm_object_detection.protos.GoogleInputReader.google_input_reader] {
       tf_record_video_input_reader: {
-        input_path: '/data/lstm_detection/tfrecords/test.tfrecord'
+        input_path: "vid_data_tiny/VID_2015-0.tfrecord"
         data_type: TF_SEQUENCE_EXAMPLE
         video_length: 4
       }
@@ -206,29 +206,29 @@ eval_config: {
   groundtruth_box_visualization_color: "red"
 }
 
-eval_input_reader {
-  label_map_path: "path/to/label_map"
-  shuffle: true
-  num_epochs: 1
-  num_parallel_batches: 1
-  num_readers: 1
-  external_input_reader {
-    [lstm_object_detection.protos.GoogleInputReader.google_input_reader] {
-      tf_record_video_input_reader: {
-        input_path: "path/to/sequence_example/data"
-        data_type: TF_SEQUENCE_EXAMPLE
-        video_length: 10
-      }
-    }
-  }
-}
+#eval_input_reader {
+#  label_map_path: "vid_data_tiny/vid_label_map.pbtxt"
+#  shuffle: true
+#  num_epochs: 1
+#  num_parallel_batches: 1
+#  num_readers: 1
+#  external_input_reader {
+#    [lstm_object_detection.protos.GoogleInputReader.google_input_reader] {
+#      tf_record_video_input_reader: {
+#        input_path: "vid_data_tiny/VID_2015-0.tfrecord"
+#        data_type: TF_SEQUENCE_EXAMPLE
+#        video_length: 10
+#      }
+#    }
+#  }
+#}
 
 eval_input_reader: {
-  label_map_path: "path/to/label_map"
+  label_map_path: "vid_data_tiny/vid_label_map.pbtxt"
   external_input_reader {
     [lstm_object_detection.protos.GoogleInputReader.google_input_reader] {
       tf_record_video_input_reader: {
-        input_path: "path/to/sequence_example/data"
+        input_path: "vid_data_tiny/VID_2015-0.tfrecord"
         data_type: TF_SEQUENCE_EXAMPLE
         video_length: 4
       }
