[ADD] 更新训练过程 1. 将TFR打成10个方便上传 2. 更新mbv2的config的tfr的内容
Test:
运行train，能够正常运行

--- a/research/lstm_object_detection/configs/lstm_ssd_interleaved_mobilenet_v2_imagenet.config
+++ b/research/lstm_object_detection/configs/lstm_ssd_interleaved_mobilenet_v2_imagenet.config
@@ -189,7 +189,7 @@ train_input_reader: {
   external_input_reader {
     [lstm_object_detection.protos.GoogleInputReader.google_input_reader] {
       tf_record_video_input_reader: {
-        input_path: "vid_data_tiny/VID_2015-0.tfrecord"
+        input_path: "vid_data_tiny/train/VID_2015-*.tfrecord"
         data_type: TF_SEQUENCE_EXAMPLE
         video_length: 4
       }
@@ -207,7 +207,7 @@ eval_config: {
 }
 
 #eval_input_reader {
-#  label_map_path: "vid_data_tiny/vid_label_map.pbtxt"
+#  label_map_path: "path/to/label_map"
 #  shuffle: true
 #  num_epochs: 1
 #  num_parallel_batches: 1
@@ -215,7 +215,7 @@ eval_config: {
 #  external_input_reader {
 #    [lstm_object_detection.protos.GoogleInputReader.google_input_reader] {
 #      tf_record_video_input_reader: {
-#        input_path: "vid_data_tiny/VID_2015-0.tfrecord"
+#        input_path: "path/to/sequence_example/data"
 #        data_type: TF_SEQUENCE_EXAMPLE
 #        video_length: 10
 #      }
@@ -228,7 +228,7 @@ eval_input_reader: {
   external_input_reader {
     [lstm_object_detection.protos.GoogleInputReader.google_input_reader] {
       tf_record_video_input_reader: {
-        input_path: "vid_data_tiny/VID_2015-0.tfrecord"
+        input_path: "vid_data_tiny/val/VID_2015-*.tfrecord"
         data_type: TF_SEQUENCE_EXAMPLE
         video_length: 4
       }
