[FIX] 设置use_moving_averages false让eval能够运行（但可能有错误风险）

--- a/research/lstm_object_detection/configs/lstm_ssd_interleaved_mobilenet_v2_imagenet.config
+++ b/research/lstm_object_detection/configs/lstm_ssd_interleaved_mobilenet_v2_imagenet.config
@@ -199,7 +199,7 @@ train_input_reader: {
 
 eval_config: {
   metrics_set: "coco_evaluation_all_frames"
-  use_moving_averages: true
+  use_moving_averages: false
   min_score_threshold: 0.5
   max_num_boxes_to_visualize: 300
   visualize_groundtruth_boxes: true
